# ChangeLog for app-portage/g-cpan
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-portage/cvs-repo/gentoo-x86/app-portage/g-cpan/ChangeLog,v 1.13 2006/04/17 12:45:25 mcummings Exp $

  17 Apr 2006; <mcummings@gentoo.org> files/digest-g-cpan-0.13.02, Manifest:
  Ye olde manifest signature

  17 Apr 2006; <mcummings@gentoo.org> g-cpan-0.13.02.ebuild:
  Bug 126367, dosym causing problems. Fixed temporarily in place until new
  version of g-cpan is ready.

  03 Apr 2006; <mcumming@gentoo.org> g-cpan-0.13.01.ebuild,
  g-cpan-0.13.02.ebuild:
  Changed homepage from mine to perl project

  30 Mar 2006; <mcummings@gentoo.org> g-cpan-0.13.02.ebuild:
  Removed collision-protect warning

  05 Jul 2005; Michael Cummings <mcummings@gentoo.org> g-cpan-0.13.02.ebuild:
  Unmasking because the -l and -u functions were comopletely broken in the .01
  version - sorry about that, meant to unmask sooner.

*g-cpan-0.13.02 (05 Jun 2005)

  05 Jun 2005; Michael Cummings <mcummings@gentoo.org>
  +g-cpan-0.13.02.ebuild:
  Bug 95146 - silly or vs and. Thanks Moshe

*g-cpan-0.13.01 (01 Jun 2005)

  01 Jun 2005; Michael Cummings <mcummings@gentoo.org>
  +g-cpan-0.13.01.ebuild:
  Actual version bump so people get last batch of fixes; a few minor code
  tweaks, bug 94759

*g-cpan-0.13-r1 (30 May 2005)

  30 May 2005; Michael Cummings <mcummings@gentoo.org>
  +g-cpan-0.13-r1.ebuild:
  Fix for the perl-core split

  25 May 2005; Michael Cummings <mcummings@gentoo.org> g-cpan-0.13.ebuild:
  BAH. Why isn't mirorr the same as mirror??? :)

  25 May 2005; Michael Cummings <mcummings@gentoo.org> g-cpan-0.13.ebuild:
  Cleaning up weird spacing in keywords list

*g-cpan-0.13 (23 May 2005)

  23 May 2005; Michael Cummings <mcummings@gentoo.org> +g-cpan-0.13.ebuild:
  New version of g-cpan.

  01 May 2005; Michael Cummings <mcummings@gentoo.org> g-cpan-0.12.ebuild: