@@ -1,16 +1,42 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 d0bed0770b04da49e1c3ea852a2546fb ChangeLog 2857
-MD5 c95f7e47844d83e0e6207555c5882387 files/digest-g-cpan-0.13.01 65
-MD5 70a698f75ab6364836fa00a3b416a7b5 files/digest-g-cpan-0.13.02 65
+DIST g-cpan-0.13.01.tar.gz 15977
+DIST g-cpan-0.13.02.tar.gz 16182 RMD160 feeb0e1816d68e6f6b3d9f9f432d827349508a6d SHA1 2cbe53102496f376bd18dad5914a2d3b5f3aff01 SHA256 cf13bfbbfd0ad89a8c391dac10c041e4f5611922dd4b881f4a2b1da775dc9788
+DIST g-cpan-0.14.0_rc1.tar.gz 24084 RMD160 67e376efa233e25cfb389a6acbb3a9e3f7ec07a2 SHA1 7ae396065a540b1f0caee4ac7586c8a6495a41d6 SHA256 5351220023655aa636b88d74d29153324bd8323ee9a4c784903931f3badbf8da
+EBUILD g-cpan-0.13.01.ebuild 855 RMD160 ca8e58999ec6f5cabd7d64874a5cd66434070902 SHA1 db396b99a13d344e990b64b2f4229cfb5660f59d SHA256 dd9c988ff879343f98067e4d36bfa5f768df30795bef6e6b14444de7d3b05aa6
 MD5 e4d72ce5c12e03cafd3300bfd3ba24e0 g-cpan-0.13.01.ebuild 855
+RMD160 ca8e58999ec6f5cabd7d64874a5cd66434070902 g-cpan-0.13.01.ebuild 855
+SHA256 dd9c988ff879343f98067e4d36bfa5f768df30795bef6e6b14444de7d3b05aa6 g-cpan-0.13.01.ebuild 855
+EBUILD g-cpan-0.13.02.ebuild 792 RMD160 f6ad5d783ccdac013ed214854d76bce532b467e9 SHA1 d296d51958563d8502bf0e6ad7332635a7795f8f SHA256 6b647e14d8079b27c76e235ef7fece39dcfaf4e6a5e8c1e0bda6be03a0576add
 MD5 630c4dda4b730c281e959f02bac7b7cc g-cpan-0.13.02.ebuild 792
+RMD160 f6ad5d783ccdac013ed214854d76bce532b467e9 g-cpan-0.13.02.ebuild 792
+SHA256 6b647e14d8079b27c76e235ef7fece39dcfaf4e6a5e8c1e0bda6be03a0576add g-cpan-0.13.02.ebuild 792
+EBUILD g-cpan-0.14.0_rc1.ebuild 658 RMD160 d00991b988fbfcd4aa8d3b3bdae0f6544f3fb59a SHA1 0b4a6f0bee47a609b65d2dc70c0873915460300c SHA256 1bb7d04fc168437a08c28d32e039e1edc426dc66c336dc5f580e6ed5cbc49a20
+MD5 5351cff1b0cc59e29d5111914bf7a1c8 g-cpan-0.14.0_rc1.ebuild 658
+RMD160 d00991b988fbfcd4aa8d3b3bdae0f6544f3fb59a g-cpan-0.14.0_rc1.ebuild 658
+SHA256 1bb7d04fc168437a08c28d32e039e1edc426dc66c336dc5f580e6ed5cbc49a20 g-cpan-0.14.0_rc1.ebuild 658
+MISC ChangeLog 2999 RMD160 1aa1c8bc0ba6ee0152613f8da40a46b6ed3f744b SHA1 6cc7624e2cf9bd1997ebd160fef49492b9ec1e57 SHA256 e4951d89b6f6b854fb3ff3af48fd497f9bb17b774736102040eb2b24f6f9b4cd
+MD5 fe550410c8655eada3936b31e05000a5 ChangeLog 2999
+RMD160 1aa1c8bc0ba6ee0152613f8da40a46b6ed3f744b ChangeLog 2999
+SHA256 e4951d89b6f6b854fb3ff3af48fd497f9bb17b774736102040eb2b24f6f9b4cd ChangeLog 2999
+MISC metadata.xml 220 RMD160 8a318784954921633dbdfe62ffae746d30f36ed6 SHA1 7730c148488133b302e18087b63e420a11f1c16d SHA256 026714c4338d7dc1bcf422da92281db015417823a0159a822b5eac9bd299ccef
 MD5 9096a6a8640284b43070891d64ee698f metadata.xml 220
+RMD160 8a318784954921633dbdfe62ffae746d30f36ed6 metadata.xml 220
+SHA256 026714c4338d7dc1bcf422da92281db015417823a0159a822b5eac9bd299ccef metadata.xml 220
+MD5 c95f7e47844d83e0e6207555c5882387 files/digest-g-cpan-0.13.01 65
+RMD160 efbb207fd997669679f321e1fc0679adca385c2d files/digest-g-cpan-0.13.01 65
+SHA256 3a1981853f117dcc007eaa7a46902ce0d48edfc158b1789019d0cd80e68923e5 files/digest-g-cpan-0.13.01 65
+MD5 096b6618e691a4711728702fc25c2e96 files/digest-g-cpan-0.13.02 241
+RMD160 788c572664127abab13272a3605b1622e28106c9 files/digest-g-cpan-0.13.02 241
+SHA256 833eedaea8a594c2570467c9791effc11ec021af41a055f7c43ed35aaa571fd1 files/digest-g-cpan-0.13.02 241
+MD5 5b114a3cf0280d5f349346af0d9c725f files/digest-g-cpan-0.14.0_rc1 250
+RMD160 312acc9f4eb33f67d776fd5d439d109259015ac7 files/digest-g-cpan-0.14.0_rc1 250
+SHA256 b6e028867ed9bddf300ca1f5c2cb19c65389e2496b32eeedce59a8376e85a81c files/digest-g-cpan-0.14.0_rc1 250
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.2.2 (GNU/Linux)
 
-iD8DBQFEQ43htG5z4I8BtQoRAuL6AJ9FpzRfv2BwHr+gnNxtY+PXMz0MIwCfaWtu
-gl5hrX8+RIxd8Q8phGfgfjQ=
-=29+F
+iD8DBQFEhAzLtG5z4I8BtQoRAhIgAKCQoEYGVY0zPEO2ipBMMD0BAdI8KwCeJQOj
+CaZj59Xl03+njVP/wjax5mA=
+=T7DO
 -----END PGP SIGNATURE-----
