@@ -1,1 +1,3 @@
 MD5 3f4b3e7e1af291e8b0ee1234ede22c96 g-cpan-0.13.02.tar.gz 16182
+RMD160 feeb0e1816d68e6f6b3d9f9f432d827349508a6d g-cpan-0.13.02.tar.gz 16182
+SHA256 cf13bfbbfd0ad89a8c391dac10c041e4f5611922dd4b881f4a2b1da775dc9788 g-cpan-0.13.02.tar.gz 16182
