@@ -1,0 +1,3 @@
+MD5 ee147d8453bdfb91608a5e06f1d4c43d g-cpan-0.14.0_rc1.tar.gz 24084
+RMD160 67e376efa233e25cfb389a6acbb3a9e3f7ec07a2 g-cpan-0.14.0_rc1.tar.gz 24084
+SHA256 5351220023655aa636b88d74d29153324bd8323ee9a4c784903931f3badbf8da g-cpan-0.14.0_rc1.tar.gz 24084
