@@ -1,0 +1,23 @@
+# Copyright 1999-2006 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-portage/cvs-repo/gentoo-x86/app-portage/g-cpan/Attic/g-cpan-0.14.0_rc1.ebuild,v 1.1 2006/06/05 10:51:49 mcummings Exp $
+
+inherit perl-module
+
+DESCRIPTION="g-cpan: generate and install CPAN modules using portage"
+HOMEPAGE="http://www.gentoo.org/proj/en/perl/"
+SRC_URI="mirror://gentoo/${P}.tar.gz"
+
+LICENSE="|| ( Artistic GPL-2 )"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc-macos ~ppc64 ~s390 ~sh ~sparc ~x86"
+IUSE=""
+
+DEPEND="dev-lang/perl
+		dev-perl/yaml"
+
+src_install() {
+		perl-module_src_install
+		dodir /var/tmp/g-cpan
+}
+
